--- a/assets/css/queries.css
+++ b/assets/css/queries.css
@@ -237,6 +237,10 @@
 		margin-bottom: 12px;
 	}
 
+	.destinations p {
+		text-align: left;
+	}
+	
 	.destinations p,
 	.contact p {
 		padding: 7px;
